--- a/scival_publications.ipynb
+++ b/scival_publications.ipynb
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "id": "e29f00a9-95b1-4543-8306-0135969cd7f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_PATH_TO_CSV = \"authorlist comparisons/scival_outputs/scival_ids_authorlist.csv\"\n",
+    "INPUT_PATH_TO_CSV = \"authorlist comparisons/scival_outputs/scival_ids_authorlist_official.csv\"\n",
     "OUTPUT_PATH_TO_CSV = \"scival_authorlist_citations_withdoccounts.csv\"\n",
     "OUTPUT_PATH_TO_CLEANED_CSV = \"scival_authorlist_citations_nodupes.csv\"\n",
     "\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "id": "ab3b11a9-521d-46c2-9811-d7095154e9b2",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "645c93b4-e6f6-41ae-9721-3578c136aaf2",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "id": "bad0dadc",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "a6de18f2",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', 'Murphy', 'Timothy H.', 'University of British Columbia, Faculty of Medicine', '7401632487', '0000-0002-0093-4490', 'NEUR (184); BIOC (112); MEDI (107)', '']\n",
+      "['Wang', ' Z. Jane', '11241026700']\n",
       "41\n"
      ]
     }
@@ -240,7 +240,7 @@
     "            member_arr.append(row)\n",
     "\n",
     "# skip header rows\n",
-    "# member_arr = member_arr[1:]\n",
+    "member_arr = member_arr[1:]\n",
     "print(member_arr[0])\n",
     "print(len(member_arr))"
    ]
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "id": "f1cc81ab",
    "metadata": {},
    "outputs": [
@@ -264,16 +264,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first row: ['0', 'Murphy', 'Timothy H.', 'University of British Columbia, Faculty of Medicine', '7401632487', '0000-0002-0093-4490', 'NEUR (184); BIOC (112); MEDI (107)', '']\n",
+      "first row: ['Wang', ' Z. Jane', '11241026700']\n",
       "number of authors in list: 41\n"
      ]
     }
    ],
    "source": [
     "#get members who have ids filled\n",
-    "id_col_idx = 4\n",
-    "lastname_col_idx = 1\n",
-    "firstname_col_idx = 2\n",
+    "id_col_idx = 2\n",
+    "lastname_col_idx = 0\n",
+    "firstname_col_idx = 1\n",
     "print(\"first row:\", member_arr[0])\n",
     "try:\n",
     "    member_arr_filtered = [row for row in member_arr if row[id_col_idx] != \"\" and int(row[id_col_idx])]\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "181db4d4",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'7401632487': 'Timothy H. Murphy', '55491054000': 'Annie Vogel-Ciernia', '7006717711': 'Brian Archibald MacVicar', '24279161600': 'Fidel Vila-Rodriguez', '7005627810': 'Shernaz X. Bamji', '7101895712': 'Lara A. Boyd', '7004159655': 'Paul Pavlidis', '7005375626': 'Martin J. McKeown', '7004896118': 'A. Jon Stoessl', '6603629883': 'P. A. Cripton', '28167863900': 'Jason S. Snyder', '7006262846': 'Wolfram G. Tetzlaff', '7401658611': 'Anthony G. Phillips', '57207534482': 'Catharine A. Winstanley', '8908521300': 'Yutian Wang', '7003907622': 'Jeremy Keith Seamans', '35408131500': 'Terrance P. Snutch', '16407421900': 'Ian R. Mackenzie', '7102737545': 'Lynn A. Raymond', '55554765000': 'Kurt Z. Haas', '37036981000': 'Mark S. Cembrowski', '7401756510': 'Fabio M.V. Rossi', '55889287500': 'Angela Jane I. Roskams', '7007032941': 'Catharine H. Rankin', '57210526278': 'Michael J. Gordon', '7103067039': 'Leonid Sigal', '11241026700': 'Z. Jane Wang', '6701751588': 'Peyman Servati', '7004079043': 'Liisa A.M. Galea', '7004549374': 'Sophia Frangou', '36237882900': 'Silke Appel-Cresswell', '55860139200': 'Helge Rhodin', '35146488900': 'Manu S. Madhav', '56363838400': 'Brian D. Fisher', '7004454250': 'Leigh Anne Swayne', '7408311558': 'Craig E. Brown', '6602928622': 'Adrienne L. Fairhall', '15065850600': 'Eric T. Shea-Brown', '26634611400': 'Emily Lauren Sylwestrak', '9239638800': 'Andy Y. Shih', '7102848867': 'Todd Stephen Woodward'}\n"
+      "{'11241026700': ' Z. Jane Wang', '24279161600': ' Fidel Vila-Rodriguez', '7004549374': ' Sophia Frangou', '16407421900': ' Ian Mackenzie', '7005375626': ' Martin McKeown', '7101895712': ' Lara A. Boyd', '7004079043': ' Liisa A. M. Galea', '7103067039': ' Leonid Sigal', '6603629883': ' P. A. Cripton', '7401756510': ' Fabio Rossi', '55860139200': ' Helge Rhodin', '35408131500': ' Terrance P. Snutch', '8908521300': ' YuTian Wang', '7004896118': ' A. Jon Stoessl', '7102848867': ' Todd Stephen Woodward', '9239638800': ' Andy Y. Shih', '7006262846': ' Wolfram G. Tetzlaff', '7004159655': ' Paul Pavlidis', '7401632487': ' Timothy H. Murphy', '7007032941': ' Catharine Rankin', '6701751588': ' Peyman Servati', '7006717711': ' Brian A. MacVicar', '7102737545': ' Lynn A. Raymond', '15065850600': ' Eric T. Shea-Brown', '36237882900': ' Silke Appel-Cresswell', '7401658611': ' Anthony G. Phillips', '28167863900': ' Jason S. Snyder', '6602928622': ' Adrienne L. Fairhall', '56363838400': ' Brian Fisher', '7004454250': ' Leigh Anne Swayne', '37036981000': ' Mark S. Cembrowski', '55491054000': ' Annie Vogel Ciernia', '55554765000': ' Kurt Haas', '7408311558': ' Craig E. Brown', '7402800449': ' Michael D. Gordon', '7005627810': ' Shernaz X. Bamji', '7003907622': ' Jeremy Keith Seamans', '35146488900': ' Manu S. Madhav', '26634611400': ' Emily Lauren Sylwestrak', '7005018303': ' Catharine A. Winstanley', '55889287500': ' Angela Jane I. Roskams'}\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "f8135e16-c82d-46f7-a120-e3dfce5de143",
    "metadata": {
     "scrolled": true
@@ -325,168 +325,168 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "looking up Timothy H. Murphy (7401632487)...\n",
-      "found 185 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Annie Vogel-Ciernia (55491054000)...\n",
-      "found 28 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Brian Archibald MacVicar (7006717711)...\n",
-      "found 167 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Fidel Vila-Rodriguez (24279161600)...\n",
-      "found 161 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Shernaz X. Bamji (7005627810)...\n",
-      "found 44 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Lara A. Boyd (7101895712)...\n",
-      "found 217 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Paul Pavlidis (7004159655)...\n",
-      "found 158 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Martin J. McKeown (7005375626)...\n",
-      "found 260 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up A. Jon Stoessl (7004896118)...\n",
-      "found 305 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up P. A. Cripton (6603629883)...\n",
-      "found 179 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Jason S. Snyder (28167863900)...\n",
-      "found 37 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Wolfram G. Tetzlaff (7006262846)...\n",
-      "found 206 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Anthony G. Phillips (7401658611)...\n",
-      "found 307 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Catharine A. Winstanley (57207534482)...\n",
-      "found 47 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Yutian Wang (8908521300)...\n",
-      "found 192 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Jeremy Keith Seamans (7003907622)...\n",
-      "found 70 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Terrance P. Snutch (35408131500)...\n",
-      "found 208 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Ian R. Mackenzie (16407421900)...\n",
-      "found 282 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Lynn A. Raymond (7102737545)...\n",
-      "found 153 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Kurt Z. Haas (55554765000)...\n",
-      "found 55 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Mark S. Cembrowski (37036981000)...\n",
-      "found 24 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Fabio M.V. Rossi (7401756510)...\n",
-      "found 174 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Angela Jane I. Roskams (55889287500)...\n",
-      "found 60 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Catharine H. Rankin (7007032941)...\n",
-      "found 111 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Michael J. Gordon (57210526278)...\n",
-      "found 31 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Leonid Sigal (7103067039)...\n",
-      "found 128 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Z. Jane Wang (11241026700)...\n",
+      "looking up  Z. Jane Wang (11241026700)...\n",
       "found 336 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Peyman Servati (6701751588)...\n",
-      "found 137 publications between 0 and now\n",
+      "looking up  Fidel Vila-Rodriguez (24279161600)...\n",
+      "found 161 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Liisa A.M. Galea (7004079043)...\n",
-      "found 210 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Sophia Frangou (7004549374)...\n",
+      "looking up  Sophia Frangou (7004549374)...\n",
       "found 313 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Silke Appel-Cresswell (36237882900)...\n",
-      "found 46 publications between 0 and now\n",
+      "looking up  Ian Mackenzie (16407421900)...\n",
+      "found 282 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Helge Rhodin (55860139200)...\n",
+      "looking up  Martin McKeown (7005375626)...\n",
+      "found 260 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Lara A. Boyd (7101895712)...\n",
+      "found 217 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Liisa A. M. Galea (7004079043)...\n",
+      "found 210 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Leonid Sigal (7103067039)...\n",
+      "found 128 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  P. A. Cripton (6603629883)...\n",
+      "found 179 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Fabio Rossi (7401756510)...\n",
+      "found 174 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Helge Rhodin (55860139200)...\n",
       "found 52 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Manu S. Madhav (35146488900)...\n",
-      "found 13 publications between 0 and now\n",
+      "looking up  Terrance P. Snutch (35408131500)...\n",
+      "found 208 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Brian D. Fisher (56363838400)...\n",
-      "found 96 publications between 0 and now\n",
+      "looking up  YuTian Wang (8908521300)...\n",
+      "found 192 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Leigh Anne Swayne (7004454250)...\n",
-      "found 53 publications between 0 and now\n",
+      "looking up  A. Jon Stoessl (7004896118)...\n",
+      "found 305 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Craig E. Brown (7408311558)...\n",
-      "found 38 publications between 0 and now\n",
+      "looking up  Todd Stephen Woodward (7102848867)...\n",
+      "found 184 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Adrienne L. Fairhall (6602928622)...\n",
-      "found 69 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Eric T. Shea-Brown (15065850600)...\n",
-      "found 82 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Emily Lauren Sylwestrak (26634611400)...\n",
-      "found 10 publications between 0 and now\n",
-      "done\n",
-      "\n",
-      "looking up Andy Y. Shih (9239638800)...\n",
+      "looking up  Andy Y. Shih (9239638800)...\n",
       "found 73 publications between 0 and now\n",
       "done\n",
       "\n",
-      "looking up Todd Stephen Woodward (7102848867)...\n",
-      "found 184 publications between 0 and now\n",
+      "looking up  Wolfram G. Tetzlaff (7006262846)...\n",
+      "found 206 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Paul Pavlidis (7004159655)...\n",
+      "found 158 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Timothy H. Murphy (7401632487)...\n",
+      "found 185 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Catharine Rankin (7007032941)...\n",
+      "found 111 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Peyman Servati (6701751588)...\n",
+      "found 137 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Brian A. MacVicar (7006717711)...\n",
+      "found 167 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Lynn A. Raymond (7102737545)...\n",
+      "found 153 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Eric T. Shea-Brown (15065850600)...\n",
+      "found 82 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Silke Appel-Cresswell (36237882900)...\n",
+      "found 46 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Anthony G. Phillips (7401658611)...\n",
+      "found 307 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Jason S. Snyder (28167863900)...\n",
+      "found 37 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Adrienne L. Fairhall (6602928622)...\n",
+      "found 69 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Brian Fisher (56363838400)...\n",
+      "found 96 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Leigh Anne Swayne (7004454250)...\n",
+      "found 53 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Mark S. Cembrowski (37036981000)...\n",
+      "found 24 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Annie Vogel Ciernia (55491054000)...\n",
+      "found 28 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Kurt Haas (55554765000)...\n",
+      "found 55 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Craig E. Brown (7408311558)...\n",
+      "found 38 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Michael D. Gordon (7402800449)...\n",
+      "found 29 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Shernaz X. Bamji (7005627810)...\n",
+      "found 44 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Jeremy Keith Seamans (7003907622)...\n",
+      "found 70 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Manu S. Madhav (35146488900)...\n",
+      "found 13 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Emily Lauren Sylwestrak (26634611400)...\n",
+      "found 10 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Catharine A. Winstanley (7005018303)...\n",
+      "found 74 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up  Angela Jane I. Roskams (55889287500)...\n",
+      "found 60 publications between 0 and now\n",
       "done\n",
       "\n"
      ]
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "a80002f7",
    "metadata": {},
    "outputs": [],
