added degrees to statistics

--- a/authorlist comparisons/comparisonCSV.ipynb
+++ b/authorlist comparisons/comparisonCSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "id": "f4d72bc6-60c9-4877-b597-0566229d982f",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 81,
    "id": "9a23163e-670f-4469-9fec-4fdab2d88cac",
    "metadata": {},
    "outputs": [],
@@ -59,42 +59,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "id": "4d78ec37",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_publication_details(author_row, sv_df, gs_df) -> dict:\n",
+    "    \n",
+    "    #get scopus profile\n",
     "    sv_name = sv_df.at[author_row,\"Name\"]\n",
     "    sv_id = sv_df.at[author_row,\"Scopus ID\"]\n",
     "    sv_coauthors = sv_df.at[author_row,\"Coauthors\"]\n",
-    "    # sv_id = \"7004159655\"\n",
     "    ar = AuthorRetrieval(sv_id)\n",
     "    pubs = ar.get_documents()\n",
-    "\n",
+    "    \n",
     "    #get scopus publications\n",
     "    sv_titles = []\n",
     "    for pub in pubs:\n",
     "        sv_titles.append(pub.title)\n",
-    "    #clean data\n",
-    "    scival_titles = [\n",
-    "        title.replace(\"<sup>\",\"\").replace(\"</sup>\",\"\").replace(\"<inf>\",\"\").replace(\"</inf>\",\"\") \n",
-    "        for title in sv_titles\n",
-    "    ]\n",
     "\n",
+    "    #get gs profile\n",
     "    gs_name = gs_df.at[author_row,\"Name\"]\n",
     "    gs_id = gs_df.at[author_row,\"Scholar ID\"]\n",
     "    gs_coauthors = gs_df.at[author_row,\"Coauthors\"]\n",
     "    author = scholarly.search_author_id(gs_id)\n",
     "\n",
+    "    #get gs publications\n",
     "    gs_titles = []\n",
     "    data_dict = scholarly.fill(author, sections=['basics', 'indices', 'publications', 'counts'])\n",
     "\n",
     "    for pub in data_dict['publications']:\n",
     "        gs_titles.append(pub['bib']['title'])\n",
     "\n",
-    "    # clean titles\n",
-    "    sv_titles = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in scival_titles]\n",
+    "    #clean titles\n",
+    "    sv_titles = [\n",
+    "        title.replace(\"<sup>\",\"\").replace(\"</sup>\",\"\").replace(\"<inf>\",\"\").replace(\"</inf>\",\"\") \n",
+    "        for title in sv_titles\n",
+    "    ]\n",
+    "    sv_titles = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in sv_titles]\n",
     "    gs_titles = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in gs_titles]\n",
     "\n",
     "    total_gs_pubs = len(gs_titles)\n",
@@ -133,16 +135,16 @@
     "        'sv_coauthors':sv_coauthors,\n",
     "        'gs_betweenness_centrality_normed': \"\",\n",
     "        'sv_betweenness_centrality_normed': \"\",\n",
-    "        'gs_only_pubs':gs_only_str,\n",
-    "        'sv_only_pubs':sv_only_str,\n",
-    "        'shared_pubs':shared_str,\n",
+    "        # 'gs_only_pubs':gs_only_str,\n",
+    "        # 'sv_only_pubs':sv_only_str,\n",
+    "        # 'shared_pubs':shared_str,\n",
     "    }\n",
     "    return author_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "id": "7a9b5b68",
    "metadata": {},
    "outputs": [
@@ -179,12 +181,15 @@
     "sv_betweenness_normed = sv_betweenness/((len(sv_coauthor_matrix)-1)*(len(sv_coauthor_matrix)-2))\n",
     "\n",
     "gs_betweenness = bct.betweenness_bin(gs_coauthor_matrix)\n",
-    "gs_betweenness_normed = gs_betweenness/((len(gs_coauthor_matrix)-1)*(len(gs_coauthor_matrix)-2))"
+    "gs_betweenness_normed = gs_betweenness/((len(gs_coauthor_matrix)-1)*(len(gs_coauthor_matrix)-2))\n",
+    "\n",
+    "gs_degrees = bct.degrees_und(gs_coauthor_matrix)\n",
+    "sv_degrees = bct.degrees_und(sv_coauthor_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "id": "4bb0dc4c",
    "metadata": {},
    "outputs": [
@@ -202,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "id": "d13c11f1",
    "metadata": {},
    "outputs": [],
@@ -212,12 +217,14 @@
     "    author_dict = get_publication_details(row, sv_df, gs_df)\n",
     "    author_dict['gs_betweenness_centrality_normed'] = gs_betweenness_normed[row]\n",
     "    author_dict['sv_betweenness_centrality_normed'] = sv_betweenness_normed[row]\n",
+    "    author_dict['gs_degree'] = gs_degrees[row]\n",
+    "    author_dict['sv_degree'] = sv_degrees[row]\n",
     "    dict_list.append(author_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "id": "fb46b752",
    "metadata": {},
    "outputs": [
@@ -235,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "id": "0113aaaa-138d-410d-98b6-ae27521eeec9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "with open(\"authors_comparisons.csv\", \"w\") as csv_file:\n",
+    "with open(\"authors_comparisons_degrees.csv\", \"w\") as csv_file:\n",
     "    header = [\n",
     "        'sv_name', \n",
     "        'gs_name', \n",
@@ -254,6 +261,8 @@
     "        'sv_coauthors',\n",
     "        'gs_betweenness_centrality_normed',\n",
     "        'sv_betweenness_centrality_normed',\n",
+    "        'gs_degree',\n",
+    "        'sv_degree',\n",
     "        'gs_only_pubs',\n",
     "        'sv_only_pubs',\n",
     "        'shared_pubs',\n",
