removing extra spaces

--- a/authorlist comparisons/publications_comparison.ipynb
+++ b/authorlist comparisons/publications_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "1dbb4105-b905-4425-9314-093ead56af07",
    "metadata": {},
    "outputs": [
@@ -45,21 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "acf84388-3428-48dc-be94-d9367f3145e3",
+   "execution_count": null,
+   "id": "09c34a03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pubs = ar.get_documents()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "e303c6d7-f752-44e5-85d7-869f49f206f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pubs = ar.get_documents()\n",
     "scival_titles = []\n",
     "for pub in pubs:\n",
     "    scival_titles.append(pub.title)"
@@ -72,9 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scival_publications = []\n",
-    "for pub in pubs:\n",
-    "    scival_publications.append((pub.title, pub.coverDate, pub.eid, pub.publicationName, pub.author_count))"
+    "# scival_publications = []\n",
+    "# for pub in pubs:\n",
+    "#     scival_publications.append((pub.title, pub.coverDate, pub.eid, pub.publicationName, pub.author_count))"
    ]
   },
   {
@@ -86,11 +77,18 @@
    "source": [
     "athr = \"ataejQQAAAAJ\" #Paul Pavlidis\n",
     "# athr = \"qJjM8hkAAAAJ\"\n",
-    "author = scholarly.search_author_id(athr)\n",
-    "\n",
+    "author = scholarly.search_author_id(athr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d432d27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gs_titles = []\n",
     "data_dict = scholarly.fill(author, sections=['basics', 'indices', 'publications', 'counts'])\n",
-    "\n",
     "\n",
     "for pub in data_dict['publications']:\n",
     "    # authors.append(author['name'])\n",
@@ -135,8 +133,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scival_titles_lowered = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in scival_titles]\n",
-    "gs_titles_lowered = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in gs_titles]"
+    "#clean\n",
+    "scival_titles_lowered = [\n",
+    "    \" \".join(\n",
+    "        [\n",
+    "            word.strip() \n",
+    "            for word in re.sub(r'[^\\w]', ' ', title.lower()).split(\" \") \n",
+    "            if word != \"\"])\n",
+    "    for title in scival_titles\n",
+    "    ]\n",
+    "# gs_titles_lowered = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in gs_titles]\n",
+    "gs_titles_lowered = [\n",
+    "    \" \".join(\n",
+    "        [\n",
+    "            word.strip() \n",
+    "            for word in re.sub(r'[^\\w]', ' ', title.lower()).split(\" \") \n",
+    "            if word != \"\"])\n",
+    "    for title in gs_titles\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b92f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#find coauthors for comparison between gs and scival(?) since coauthors would be most important factor"
    ]
   },
   {
@@ -234,24 +258,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "ed2ed584-9a98-41a0-9447-bd4171be7f8c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list(set(gs_titles_complete).difference(set(gs_titles))))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 94,
    "id": "77e87d41-0f94-4340-94cb-d5c0d591a2ee",
    "metadata": {},
@@ -270,11 +276,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "85e78f75-d080-49c5-ba43-cb60e7ae3b23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "comp_df = pd.read_csv(\"6_publication_compare.csv\")\n",
+    "scival_comp_list = comp_df[\"SCIVAL ONLY publications\"].dropna().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "abf4e760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['coexpresion analysis of human genes across many microarray data sets', 'understanding the impact of 1q21 1 copy number variant', 'activation of mapk in hearts of emd null mice similarities between mouse models of x linked and autosomal dominant emery dreifuss muscular dystrophy', 'promoter region based classification of genes', 'transcriptional and behavioral interaction between 22q11 2 orthologs modulates schizophrenia related phenotypes in mice', 'the impact of multifunctional genes on guilt by association analysis', 'corrigendum to cortical functional connectivity decodes subconscious task irrelevant threat related emotion processing neuroimage 61 4 2012 1355 1363 s1053811912003321 10 1016 j neuroimage 2012 03 051', 'whose sample is it anyway widespread misannotation of samples in transcriptomics studies version 1 referees 2 approved', 'transcriptomic responses to high water temperature in two species of pacific salmon', 'fto obesity and the adolescent brain', 'proteome topfind 3 0 with topfinder and pathfinder database and analysis tools for the association of protein termini to pre and post translational events', 'seizures and failures in the giant fiber pathway of drosophila bang sensitive paralytic mutants']\n"
+     ]
+    }
+   ],
+   "source": [
+    "scival_comp_lowered = [\n",
+    "    \" \".join([word.strip() for word in title.split(\" \") if word != \"\"])\n",
+    "    for title in scival_comp_list\n",
+    "    ]\n",
+    "\n",
+    "print(scival_comp_lowered)"
+   ]
   }
  ],
  "metadata": {
@@ -293,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
