--- a/authorlist comparisons/comparisonCSV.ipynb
+++ b/authorlist comparisons/comparisonCSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "id": "f4d72bc6-60c9-4877-b597-0566229d982f",
    "metadata": {},
    "outputs": [
@@ -25,12 +25,13 @@
     "config['Authentication'] ['APIKey'] = \"127f5bf5de20d338f686704a9a328b86\"\n",
     "print(config['Authentication'] ['APIKey'])\n",
     "import bct\n",
-    "from scholarly import scholarly\n"
+    "from scholarly import scholarly, ProxyGenerator\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 107,
    "id": "9a23163e-670f-4469-9fec-4fdab2d88cac",
    "metadata": {},
    "outputs": [],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 106,
    "id": "4d78ec37",
    "metadata": {},
    "outputs": [],
@@ -82,6 +83,9 @@
     "    gs_name = gs_df.at[author_row,\"Name\"]\n",
     "    gs_id = gs_df.at[author_row,\"Scholar ID\"]\n",
     "    gs_coauthors = gs_df.at[author_row,\"Coauthors\"]\n",
+    "    pg = ProxyGenerator()\n",
+    "    success = pg.FreeProxies()\n",
+    "    scholarly.use_proxy(pg)\n",
     "    author = scholarly.search_author_id(gs_id)\n",
     "\n",
     "    #get gs publications\n",
@@ -96,11 +100,31 @@
     "        title.replace(\"<sup>\",\"\").replace(\"</sup>\",\"\").replace(\"<inf>\",\"\").replace(\"</inf>\",\"\") \n",
     "        for title in sv_titles\n",
     "    ]\n",
-    "    sv_titles = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in sv_titles]\n",
-    "    gs_titles = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in gs_titles]\n",
+    "        #clean\n",
+    "    sv_titles = [\n",
+    "        \" \".join(\n",
+    "            [\n",
+    "                word.strip() \n",
+    "                for word in re.sub(r'[^\\w]', ' ', title.lower()).split(\" \") \n",
+    "                if word != \"\"])\n",
+    "        for title in sv_titles\n",
+    "        ]\n",
+    "    # gs_titles_lowered = [re.sub(r'[^\\w]', ' ', title.lower()).strip() for title in gs_titles]\n",
+    "    gs_titles = [\n",
+    "        \" \".join(\n",
+    "            [\n",
+    "                word.strip() \n",
+    "                for word in re.sub(r'[^\\w]', ' ', title.lower()).split(\" \") \n",
+    "                if word != \"\"])\n",
+    "        for title in gs_titles\n",
+    "        ]\n",
     "\n",
     "    total_gs_pubs = len(gs_titles)\n",
     "    total_sv_pubs = len(sv_titles)\n",
+    "\n",
+    "    #duplicates\n",
+    "    sv_duplicates = [k for k,v in Counter(sv_titles).items() if v>1]\n",
+    "    gs_duplicates = [k for k,v in Counter(gs_titles).items() if v>1]\n",
     "\n",
     "    #matching titles\n",
     "    shared_titles = list(set(gs_titles).intersection(sv_titles))\n",
@@ -127,7 +151,9 @@
     "        'sv_name': sv_name, \n",
     "        'gs_name': gs_name, \n",
     "        'gs_count': total_gs_pubs, \n",
+    "        'gs_duplicates_count':gs_duplicates,\n",
     "        'sv_count': total_sv_pubs, \n",
+    "        'sv_duplicates_count':sv_duplicates,\n",
     "        'gs_only_count':num_gs_only, \n",
     "        'sv_only_count':num_sv_only,\n",
     "        'shared_count':num_matches,\n",
@@ -144,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 108,
    "id": "7a9b5b68",
    "metadata": {},
    "outputs": [
@@ -169,7 +195,7 @@
     }
    ],
    "source": [
-    "author_row = 6\n",
+    "# author_row = 6\n",
     "\n",
     "sv_df = pd.read_csv(\"scival_outputs/scival_authorlist_publications_official.csv\")\n",
     "gs_df = pd.read_csv(\"gs_outputs/gs_authorlist_publications.csv\")\n",
@@ -189,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "id": "4bb0dc4c",
    "metadata": {},
    "outputs": [
@@ -207,28 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 109,
    "id": "d13c11f1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[90], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m dict_list \u001b[39m=\u001b[39m []\n\u001b[0;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(sv_df\u001b[39m.\u001b[39mindex)):\n\u001b[1;32m----> 3\u001b[0m     author_dict \u001b[39m=\u001b[39m get_publication_details(row, sv_df, gs_df)\n\u001b[0;32m      4\u001b[0m     author_dict[\u001b[39m'\u001b[39m\u001b[39mgs_betweenness_centrality\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m gs_betweenness[row]\n\u001b[0;32m      5\u001b[0m     author_dict[\u001b[39m'\u001b[39m\u001b[39msv_betweenness_centrality\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m sv_betweenness[row]\n",
-      "Cell \u001b[1;32mIn[82], line 19\u001b[0m, in \u001b[0;36mget_publication_details\u001b[1;34m(author_row, sv_df, gs_df)\u001b[0m\n\u001b[0;32m     17\u001b[0m gs_id \u001b[39m=\u001b[39m gs_df\u001b[39m.\u001b[39mat[author_row,\u001b[39m\"\u001b[39m\u001b[39mScholar ID\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m     18\u001b[0m gs_coauthors \u001b[39m=\u001b[39m gs_df\u001b[39m.\u001b[39mat[author_row,\u001b[39m\"\u001b[39m\u001b[39mCoauthors\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m---> 19\u001b[0m author \u001b[39m=\u001b[39m scholarly\u001b[39m.\u001b[39;49msearch_author_id(gs_id)\n\u001b[0;32m     21\u001b[0m \u001b[39m#get gs publications\u001b[39;00m\n\u001b[0;32m     22\u001b[0m gs_titles \u001b[39m=\u001b[39m []\n",
-      "File \u001b[1;32mc:\\Users\\caoyut\\.conda\\envs\\sms\\lib\\site-packages\\scholarly\\_scholarly.py:349\u001b[0m, in \u001b[0;36m_Scholarly.search_author_id\u001b[1;34m(self, id, filled, sortby, publication_limit)\u001b[0m\n\u001b[0;32m    322\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msearch_author_id\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39mid\u001b[39m: \u001b[39mstr\u001b[39m, filled: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m, sortby: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mcitedby\u001b[39m\u001b[39m\"\u001b[39m, publication_limit: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39mAuthor:\n\u001b[0;32m    323\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Search by author id and return a single Author object\u001b[39;00m\n\u001b[0;32m    324\u001b[0m \u001b[39m    :param sortby: select the order of the citations in the author page. Either by 'citedby' or 'year'. Defaults to 'citedby'.\u001b[39;00m\n\u001b[0;32m    325\u001b[0m \u001b[39m    :type sortby: string\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    347\u001b[0m \u001b[39m             'url_picture': 'https://scholar.googleusercontent.com/citations?view_op=view_photo&user=EmD_lTEAAAAJ&citpid=3'}\u001b[39;00m\n\u001b[0;32m    348\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 349\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__nav\u001b[39m.\u001b[39;49msearch_author_id(\u001b[39mid\u001b[39;49m, filled, sortby, publication_limit)\n",
-      "File \u001b[1;32mc:\\Users\\caoyut\\.conda\\envs\\sms\\lib\\site-packages\\scholarly\\_navigator.py:316\u001b[0m, in \u001b[0;36mNavigator.search_author_id\u001b[1;34m(self, id, filled, sortby, publication_limit)\u001b[0m\n\u001b[0;32m    314\u001b[0m     res \u001b[39m=\u001b[39m author_parser\u001b[39m.\u001b[39mfill(res, sortby\u001b[39m=\u001b[39msortby, publication_limit\u001b[39m=\u001b[39mpublication_limit)\n\u001b[0;32m    315\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 316\u001b[0m     res \u001b[39m=\u001b[39m author_parser\u001b[39m.\u001b[39;49mfill(res, sections\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mbasics\u001b[39;49m\u001b[39m'\u001b[39;49m], sortby\u001b[39m=\u001b[39;49msortby, publication_limit\u001b[39m=\u001b[39;49mpublication_limit)\n\u001b[0;32m    317\u001b[0m \u001b[39mreturn\u001b[39;00m res\n",
-      "File \u001b[1;32mc:\\Users\\caoyut\\.conda\\envs\\sms\\lib\\site-packages\\scholarly\\author_parser.py:441\u001b[0m, in \u001b[0;36mAuthorParser.fill\u001b[1;34m(self, author, sections, sortby, publication_limit)\u001b[0m\n\u001b[0;32m    439\u001b[0m url_citations \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m sortby_str\n\u001b[0;32m    440\u001b[0m url \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m&pagesize=\u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(url_citations, _PAGESIZE)\n\u001b[1;32m--> 441\u001b[0m soup \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnav\u001b[39m.\u001b[39;49m_get_soup(url)\n\u001b[0;32m    443\u001b[0m \u001b[39m# Update scholar_id\u001b[39;00m\n\u001b[0;32m    444\u001b[0m scholar_id \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mfindall(_CITATIONAUTHRE, soup\u001b[39m.\u001b[39mfind(\u001b[39m\"\u001b[39m\u001b[39mlink\u001b[39m\u001b[39m\"\u001b[39m, rel\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcanonical\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mhref\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m))[\u001b[39m0\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\caoyut\\.conda\\envs\\sms\\lib\\site-packages\\scholarly\\_navigator.py:239\u001b[0m, in \u001b[0;36mNavigator._get_soup\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    237\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_get_soup\u001b[39m(\u001b[39mself\u001b[39m, url: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m BeautifulSoup:\n\u001b[0;32m    238\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Return the BeautifulSoup for a page on scholar.google.com\"\"\"\u001b[39;00m\n\u001b[1;32m--> 239\u001b[0m     html \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_page(\u001b[39m'\u001b[39;49m\u001b[39mhttps://scholar.google.com\u001b[39;49m\u001b[39m{0}\u001b[39;49;00m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mformat(url))\n\u001b[0;32m    240\u001b[0m     html \u001b[39m=\u001b[39m html\u001b[39m.\u001b[39mreplace(\u001b[39mu\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\xa0\u001b[39;00m\u001b[39m'\u001b[39m, \u001b[39mu\u001b[39m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    241\u001b[0m     res \u001b[39m=\u001b[39m BeautifulSoup(html, \u001b[39m'\u001b[39m\u001b[39mhtml.parser\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\caoyut\\.conda\\envs\\sms\\lib\\site-packages\\scholarly\\_navigator.py:113\u001b[0m, in \u001b[0;36mNavigator._get_page\u001b[1;34m(self, pagerequest, premium)\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    112\u001b[0m     w \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39muniform(\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m)\n\u001b[1;32m--> 113\u001b[0m     time\u001b[39m.\u001b[39;49msleep(w)\n\u001b[0;32m    114\u001b[0m     resp \u001b[39m=\u001b[39m session\u001b[39m.\u001b[39mget(pagerequest, timeout\u001b[39m=\u001b[39mtimeout)\n\u001b[0;32m    115\u001b[0m     \u001b[39mif\u001b[39;00m premium \u001b[39mis\u001b[39;00m \u001b[39mFalse\u001b[39;00m:  \u001b[39m# premium methods may contain sensitive information\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict_list = []\n",
     "for row in range(len(sv_df.index)):\n",
@@ -244,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "fb46b752",
    "metadata": {},
    "outputs": [
@@ -262,18 +270,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 111,
+   "id": "c098d822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d in dict_list:\n",
+    "    gs_num_duplicates = len(d['gs_duplicates_count'])\n",
+    "    d.update((k, gs_num_duplicates) for k, v in d.items() if k == \"gs_duplicates_count\")\n",
+    "    sv_num_duplicates = len(d['sv_duplicates_count'])\n",
+    "    d.update((k, sv_num_duplicates) for k, v in d.items() if k == \"sv_duplicates_count\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "id": "0113aaaa-138d-410d-98b6-ae27521eeec9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "with open(\"authors_comparisons_degrees.csv\", \"w\") as csv_file:\n",
+    "with open(\"authors_comparisons_realnumduplicates.csv\", \"w\") as csv_file:\n",
     "    header = [\n",
     "        'sv_name', \n",
     "        'gs_name', \n",
     "        'gs_count', \n",
+    "        'gs_duplicates_count',\n",
     "        'sv_count', \n",
+    "        'sv_duplicates_count',\n",
     "        'gs_only_count', \n",
     "        'sv_only_count',\n",
     "        'shared_count',\n",
