updating to 2023 members and refactoring

--- a/authorlist comparisons/comparisonCSV.ipynb
+++ b/authorlist comparisons/comparisonCSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "id": "f4d72bc6-60c9-4877-b597-0566229d982f",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "id": "9a23163e-670f-4469-9fec-4fdab2d88cac",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "4d78ec37",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,9 @@
     "\n",
     "    author_dict = {\n",
     "        'sv_name': sv_name, \n",
+    "        'sv_id': sv_id,\n",
     "        'gs_name': gs_name, \n",
+    "        'gs_id': gs_id,\n",
     "        'gs_count': total_gs_pubs, \n",
     "        'gs_duplicates_count':gs_duplicates,\n",
     "        'sv_count': total_sv_pubs, \n",
@@ -210,7 +212,10 @@
     "gs_betweenness_normed = gs_betweenness/((len(gs_coauthor_matrix)-1)*(len(gs_coauthor_matrix)-2))\n",
     "\n",
     "gs_degrees = bct.degrees_und(gs_coauthor_matrix)\n",
-    "sv_degrees = bct.degrees_und(sv_coauthor_matrix)"
+    "sv_degrees = bct.degrees_und(sv_coauthor_matrix)\n",
+    "\n",
+    "gs_strengths = bct.strengths_und(gs_coauthor_matrix)\n",
+    "sv_strengths = bct.strengths_und(sv_coauthor_matrix)"
    ]
   },
   {
@@ -247,6 +252,8 @@
     "    author_dict['sv_betweenness_centrality_normed'] = sv_betweenness_normed[row]\n",
     "    author_dict['gs_degree'] = gs_degrees[row]\n",
     "    author_dict['sv_degree'] = sv_degrees[row]\n",
+    "    author_dict['gs_strength'] = gs_strengths[row]\n",
+    "    author_dict['sv_strength'] = sv_strengths[row]\n",
     "    dict_list.append(author_dict)"
    ]
   },
@@ -293,7 +300,9 @@
     "with open(\"authors_comparisons_realnumduplicates.csv\", \"w\") as csv_file:\n",
     "    header = [\n",
     "        'sv_name', \n",
+    "        'sv_id',\n",
     "        'gs_name', \n",
+    "        'gs_id',\n",
     "        'gs_count', \n",
     "        'gs_duplicates_count',\n",
     "        'sv_count', \n",
@@ -309,6 +318,8 @@
     "        'sv_betweenness_centrality_normed',\n",
     "        'gs_degree',\n",
     "        'sv_degree',\n",
+    "        'gs_strength',\n",
+    "        'sv_strength',\n",
     "        'gs_only_pubs',\n",
     "        'sv_only_pubs',\n",
     "        'shared_pubs',\n",
