--- a/scival_profile_lookup.ipynb
+++ b/scival_profile_lookup.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2e5922c95a0e4f1fb73cede25eca779a\n",
+      "127f5bf5de20d338f686704a9a328b86\n",
       "127f5bf5de20d338f686704a9a328b86\n"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,20 +425,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Author(eid='9-s2.0-26634611400', orcid=None, surname='Sylwestrak', initials='E.L.', givenname='Emily Lauren', affiliation='University of Oregon', documents=10, affiliation_id='60012317', city='Eugene', country='United States', areas='NEUR (5); MULT (3); MEDI (3)')]\n"
+      "[Author(eid='9-s2.0-35465675000', orcid='0000-0002-1784-5662', surname='McIntosh', initials='A.R.', givenname='Anthony Randal', affiliation='Simon Fraser University', documents=297, affiliation_id='60018491', city='Burnaby', country='Canada', areas='NEUR (403); MEDI (122); PSYC (69)'), Author(eid='9-s2.0-57191566535', orcid=None, surname='McIntosh', initials='A.R.', givenname='Andrew Randy', affiliation='National Institute on Aging (NIA)', documents=8, affiliation_id='60017252', city='Bethesda', country='United States', areas='NEUR (15); MEDI (7); HEAL (4)'), Author(eid='9-s2.0-7103288251', orcid=None, surname='McIntosh', initials='R.', givenname='Randy', affiliation='Black Clawson Co', documents=3, affiliation_id='100316940', city='Middletown', country='United States', areas='CENG (3)')]\n"
      ]
     }
    ],
    "source": [
-    "lastname = \"sylwestrak\" \n",
-    "firstname = \"emily\"\n",
+    "lastname = \"mcintosh\" \n",
+    "firstname = \"randy\"\n",
     "query = f\"authlastname({lastname}) and authfirst({firstname})\"\n",
     "s = AuthorSearch(query)\n",
     "authors = s.authors\n",
