--- a/scival_publications.ipynb
+++ b/scival_publications.ipynb
@@ -396,6 +396,10 @@
       "looking up Ian Mackenzie (16407421900)...\n",
       "found 282 publications between 0 and now\n",
       "done\n",
+      "\n",
+      "looking up Lynn A. Raymond (7102737545)...\n",
+      "found 153 publications between 0 and now\n",
+      "done\n",
       "\n"
      ]
     }
